--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "ag-grid-angular": "^33.3.2",
+    "bootstrap": "^5.3.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.14",
+    "@angular-devkit/build-angular": "^17.3.17",
     "@angular/cli": "^17.3.14",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
