--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "src/styles.less",
               "node_modules/ag-grid-community/styles/ag-grid.css",
-              "node_modules/ag-grid-community/styles/ag-theme-balham.css"
+              "node_modules/ag-grid-community/styles/ag-theme-balham.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": []
           },
