--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ag-grid-angular": "^33.3.2",
     "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
