--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/router": "^17.3.0",
     "ag-grid-angular": "^33.3.2",
     "bootstrap-icons": "^1.13.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@angular/cli": "^17.3.14",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.5.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
